Fixed footer positioning on mobile devices

--- a/stylesheets/_base.sass
+++ b/stylesheets/_base.sass
@@ -137,3 +137,6 @@ $tablet-width: 1024px
         @include justify-content(center)
         .media-button
             float: none
+
+    #footer
+        position: static
