--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -148,7 +148,10 @@ a {
     justify-content: center;
     -ms-flex-pack: center; }
     #social-media .media-button {
-      float: none; } }
+      float: none; }
+
+  #footer {
+    position: static; } }
 #one, #two, #three {
   font-family: Poppins;
   color: #3A3A3A;
