--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -148,7 +148,10 @@ a {
     justify-content: center;
     -ms-flex-pack: center; }
     #social-media .media-button {
-      float: none; } }
+      float: none; }
+
+  #footer {
+    position: static; } }
 #about {
   max-width: 67%;
   margin: 0 auto 75px; }
