--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -148,7 +148,10 @@ a {
     justify-content: center;
     -ms-flex-pack: center; }
     #social-media .media-button {
-      float: none; } }
+      float: none; }
+
+  #footer {
+    position: static; } }
 #title {
   margin: 50px 0 40px;
   text-align: center;
